--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,11 @@ a:hover {
   font-size: 14px;
 }
 
+/* Add a specific style for the active state in the base CSS */
+.nav-links.active {
+  display: flex !important;
+}
+
 .nav-button,
 .hero-section-button,
 .pricing--card button,
@@ -721,4 +726,5 @@ a:hover {
   font-size: 24px;
   cursor: pointer;
   user-select: none;
+  z-index: 1000;
 }
